@@ -167,6 +167,9 @@ UTILITIES
     o	R CMD REMOVE now uses remove.packages() and hence removes all
 	members of a bundle.
 
+    o	R CMD SHLIB is now an R script and has a new option -n aka
+	--dry-run to show what commands would be run.
+
 
 Rd CONVERSION
 
